--- a/destinasi.html
+++ b/destinasi.html
@@ -69,7 +69,7 @@
         </div>
         <div class="col">
             <div class="table-des">
-                <img src="Gambar/gambir.jpg" width="100%">
+                <img src="Gambar/gambir.JPG" width="100%">
                 <h2>Gunung Gambir</h2>
                 <ul>
                     <li>Rp 0,-/orang</li>
@@ -80,7 +80,7 @@
         </div>
         <div class="col">
             <div class="table-des">
-                <img src="Gambar/tancak.png" width="100%">
+                <img src="Gambar/tancak.PNG" width="100%">
                 <h2>Air Terjun Tancak</h2>
                 <ul>
                     <li>Rp 5.000,-/orang</li>
