--- a/gallery.html
+++ b/gallery.html
@@ -34,7 +34,7 @@
             </div>
     </div>
     <div class="gbr-gallery">
-        <img src="Gallery/antrokan.jpg"><img src="Gallery/bandealit.jpg"><img src="Gallery/botani.jpg"><img src="Gallery/gambir.jpg"><img src="Gallery/gb niagara.jpg"><img src="Gallery/niagara.jpg"><img src="Gallery/papuma.jpg"><img src="Gallery/paseban.jpg"><img src="Gallery/botaniii.jpg"><img src="Gallery/payangan.jpg"><img src="Gallery/rembangan.jpg"><img src="Gallery/situs duplang.jpg"><img src="Gallery/tancak.png"><img src="Gallery/teluk love.jpg"><img src="Gallery/terjun sumber salak.jpg"><img src="Gallery/gambirr.jpg"><img src="Gallery/tiara.jpg"><img src="Gallery/watulo.jpg">
+        <img src="Gallery/antrokan.jpg"><img src="Gallery/bandealit.jpg"><img src="Gallery/botani.jpg"><img src="Gallery/gambir.JPG"><img src="Gallery/gb niagara.jpg"><img src="Gallery/niagara.jpg"><img src="Gallery/papuma.jpg"><img src="Gallery/paseban.jpg"><img src="Gallery/botaniii.jpg"><img src="Gallery/payangan.jpg"><img src="Gallery/rembangan.jpg"><img src="Gallery/situs duplang.jpg"><img src="Gallery/tancak.PNG"><img src="Gallery/teluk love.jpg"><img src="Gallery/terjun sumber salak.jpg"><img src="Gallery/gambirr.jpg"><img src="Gallery/tiara.jpg"><img src="Gallery/watulo.jpg">
     </div>
     <div class="show">
       <div class="overlay"></div>
