--- a/antrokan.html
+++ b/antrokan.html
@@ -28,7 +28,7 @@
             </div>
             <div class="search-box">
                 <input class="search-text" type="text" name="" placeholder="telusuri">
-                <a class="search-btn" href="#">
+                <a class="search-btn" href="search.html">
                     <img src="icon/search-btn.png" width=20px>
                 </a>
             </div>
