--- a/destinasi.html
+++ b/destinasi.html
@@ -28,23 +28,12 @@
             </div>
             <div class="search-box">
                 <input class="search-text" type="text" name="" placeholder="telusuri">
-                <a class="search-btn" href="#">
+                <a class="search-btn" href="search.html">
                     <img src="icon/search-btn.png" width=20px>
                 </a>
             </div>
     </div>
     <div class="des-table-destinasi" style=";top:150px">
-        <div class="col">
-            <div class="table-des">
-                <img src="Gambar/niagara.jpg" width="100%">
-                <h2>Pemandian Niagara</h2>
-                <ul>
-                    <li>Weekday : Rp 15.000,-/orang</li>
-                    <li>Weekend : Rp 20.000,-/orang</li>
-                </ul>
-                <a href="#">Lihat</a>
-            </div>
-        </div>
         <div class="col">
             <div class="table-des">
                 <img src="Gambar/botani.jpg" width="100%">
@@ -54,6 +43,17 @@
                     <li>Weekend : Rp 20.000,-/orang</li>
                 </ul>
                 <a href="botani.html">Lihat</a>
+            </div>
+        </div>
+        <div class="col">
+            <div class="table-des">
+                <img src="Gambar/niagara.jpg" width="100%">
+                <h2>Pemandian Niagara</h2>
+                <ul>
+                    <li>Weekday : Rp 15.000,-/orang</li>
+                    <li>Weekend : Rp 20.000,-/orang</li>
+                </ul>
+                <a href="#">Lihat</a>
             </div>
         </div>
         <div class="col">
@@ -69,7 +69,7 @@
         </div>
         <div class="col">
             <div class="table-des">
-                <img src="Gambar/gambir.JPG" width="100%">
+                <img src="Gambar/gambir.jpg" width="100%">
                 <h2>Gunung Gambir</h2>
                 <ul>
                     <li>Rp 0,-/orang</li>
@@ -80,7 +80,7 @@
         </div>
         <div class="col">
             <div class="table-des">
-                <img src="Gambar/tancak.PNG" width="100%">
+                <img src="Gambar/tancak.png" width="100%">
                 <h2>Air Terjun Tancak</h2>
                 <ul>
                     <li>Rp 5.000,-/orang</li>
