--- a/search.html
+++ b/search.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>About</title>
+    <title>Search...</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
@@ -33,24 +33,40 @@
                 </a>
             </div>
     </div>
-
-    
-    <div class="abt">
-        <div class="logo-bot-abt">
-           <center><img src="Gambar/icon2.png"></center> 
+    <div class="search" style=";top:150px">
+        <h1>Search Results for: </h1><br>
+        <div class="col-src">
+            <div class="table-src">
+                <img src="Gambar/botani.jpg" width="30%" height="40%">
+                <div class="src">
+                    <h2>Taman Botani</h2>
+                    <ul>
+                        <li>Weekday : Rp 12.000,-/orang</li>
+                        <li>Weekend : Rp 20.000,-/orang</li>
+                    </ul>
+                    <p>Liburan keluarga ketaman botani memang sangatlah menyenangkan selain bisa rekreasi juga bisa bermanfaat sebagai...</p>
+                    <a href="botani.html">Read more</a>
+                </div>
+            </div>
         </div>
-        <div class="ctn-abt">
-            <center>
-                <h2 style="color: grey;"><center>Tentang Pariwisata Jember</center></h2>
-                <p style="color: grey">
-                    Pariwisata Jember adalah portal yang menyajikan informasi tentang tempat wisata di Jember, pesona keindahan alam jember. Jember menyimpan sejuta kekayaan alam yang begitu indahnya,sehingga perlu diangkat ke publik. <br><br>
-                    Ada banyak jenis wisata yang akan Anda eksplorasi di sini mulai dari wisata pantai, pegunungan, hutan, pemandian, dan air terjun. <br><br>
-                    EMAIL KAMI : iduel080614@gmail.com
-                </p>
-            </center>
+        <div class="col-src">
+            <div class="table-src">
+                <img src="Gambar/antrokan.jpg" width="30%" height="40%">
+                <div class="src">
+                    <h2>Air terjun Antrokan</h2>
+                    <ul>
+                        <li>Rp 5.000,-/orang</li>
+                        <li></li>
+                    </ul>
+                    <p>Jernihnya air yang meluncur bebeas diantara tebing yang menjulang tinggi yang dikelilingi oleh rimbunan pohon hijau ini sangatlah...</p>
+                    <a href="antrokan.html">Read more</a>
+                </div>
+            </div>
         </div>
     </div>
-
+    <div class="pdh">
+        <a style="background: #aeeaf7">1</a>
+    </div>
     <div class="credit">
         <div class="tentang">
 			<div>	
@@ -92,8 +108,11 @@
             <a href="contactUs.html">Contact Us</a><br><br>
             <a href="about.html">About</a><br><br>
         </div>
+        <div class="logo-bot">
+
+        </div>
     </div>
-    <div class="cpr">
+    <div style="background-color:#016aae; color:azure; padding: 15px 0;margin: 0;">
         <center>
             Copyright 2018 <b>Pariwisata Jember</b> site by AndiSr
         </center>
