--- a/contactUs.html
+++ b/contactUs.html
@@ -85,6 +85,7 @@
             <a href="about.html">About</a><br><br>
         </div>
         <div class="logo-bot">
+            <img src="Gambar/icon2.png">
     
         </div>
     </div>
