--- a/destinasi.html
+++ b/destinasi.html
@@ -33,7 +33,7 @@
                 </a>
             </div>
     </div>
-    <div class="des-table-destinasi" style=";top:150px">
+    <div class="des-table-destinasi">
         <div class="col">
             <div class="table-des">
                 <img src="Gambar/botani.jpg" width="100%">
@@ -69,7 +69,7 @@
         </div>
         <div class="col">
             <div class="table-des">
-                <img src="Gambar/gambir.JPG" width="100%">
+                <img src="Gambar/gambir.jpg" width="100%">
                 <h2>Gunung Gambir</h2>
                 <ul>
                     <li>Rp 0,-/orang</li>
@@ -80,7 +80,7 @@
         </div>
         <div class="col">
             <div class="table-des">
-                <img src="Gambar/tancak.PNG" width="100%">
+                <img src="Gambar/tancak.png" width="100%">
                 <h2>Air Terjun Tancak</h2>
                 <ul>
                     <li>Rp 5.000,-/orang</li>
@@ -170,7 +170,7 @@
             <a href="about.html">About</a><br><br>
         </div>
         <div class="logo-bot">
-
+            <img src="Gambar/icon2.png">
         </div>
     </div>
     <div style="background-color:#016aae; color:azure; padding: 15px 0;margin: 0;">
