--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
         <div class="col">
             <div class="table">
-                <img src="Gambar/gambir.JPG" width="100%">
+                <img src="Gambar/gambir.jpg" width="100%">
                 <h2>Gunung Gambir</h2>
                 <ul>
                     <li>Rp 0,-/orang</li>
@@ -89,7 +89,7 @@
         </div>
     </div>
     <div class="gal">
-        <img src="Gambar/niagara.jpg" width=20% height=184px style="margin:0"><img src="Gambar/botani.jpg" width=20% height=184px style="margin:0"><img src="Gambar/rembangan.jpg" width=20% height=184px style="margin:0"><img src="Gambar/gambir.JPG" width=20% height=184px style="margin:0"><img src="Gambar/tancak.PNG" width=20% height=184px style="margin:0">
+        <img src="Gambar/niagara.jpg" width=20% height=184px style="margin:0"><img src="Gambar/botani.jpg" width=20% height=184px style="margin:0"><img src="Gambar/rembangan.jpg" width=20% height=184px style="margin:0"><img src="Gambar/gambir.jpg" width=20% height=184px style="margin:0"><img src="Gambar/tancak.png" width=20% height=184px style="margin:0">
     </div>
     <div class="show">
         <div class="overlay"></div>
