--- a/antrokan.html
+++ b/antrokan.html
@@ -100,6 +100,7 @@
             <a href="about.html">About</a><br><br>
         </div>
         <div class="logo-bot">
+            <img src="Gambar/icon2.png">
 
         </div>
     </div>
