--- a/destinasi2.html
+++ b/destinasi2.html
@@ -33,7 +33,7 @@
                 </a>
             </div>
     </div>
-    <div class="des-table-destinasi" style=";top:150px">
+    <div class="des-table-destinasi">
         <div class="col">
             <div class="table-des">
                 <img src="Gambar/antrokan.jpg" width="100%">
@@ -93,6 +93,7 @@
             <a href="about.html">About</a><br><br>
         </div>
         <div class="logo-bot">
+            <img src="Gambar/icon2.png">
 
         </div>
     </div>
